// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders date picker for timeframe end 1`] = `
.c1 {
  padding: 2px;
}

.c0 {
  background: #FFFFFF;
}

<div
  class="c0"
  data-testid="date-end"
>
  <div
    class="react-calendar"
  >
    <div
      class="react-calendar__navigation"
    >
      <button
        aria-label=""
        class="react-calendar__navigation__arrow react-calendar__navigation__prev-button"
        type="button"
      >
        <div
          class="c1"
        >
          <svg
            height="19"
            opacity="1"
            viewBox="0 0 100 100"
            width="19"
          >
            <path
              d="M73.31 23l26.662 26.662-27.266 27.266-2.51-2.51 23.384-23.39H0v-4h92.198l-21.456-21.46L73.309 23z"
              fill="rgba(39,86,109,0.7)"
              transform="rotate(180 50 50)"
            />
          </svg>
        </div>
      </button>
      <button
        aria-label=""
        class="react-calendar__navigation__label"
        style="flex-grow: 1;"
        type="button"
      >
        <span
          class="react-calendar__navigation__label__labelText react-calendar__navigation__label__labelText--from"
        >
          July 2020
        </span>
      </button>
      <button
        aria-label=""
        class="react-calendar__navigation__arrow react-calendar__navigation__next-button"
        type="button"
      >
        <div
          class="c1"
        >
          <svg
            height="19"
            opacity="1"
            viewBox="0 0 100 100"
            width="19"
          >
            <path
              d="M73.31 23l26.662 26.662-27.266 27.266-2.51-2.51 23.384-23.39H0v-4h92.198l-21.456-21.46L73.309 23z"
              fill="rgba(39,86,109,0.7)"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="react-calendar__viewContainer"
    >
      <div
        class="react-calendar__month-view "
      >
        <div
          style="display: flex; align-items: flex-end;"
        >
          <div
            style="flex-grow: 1; width: 100%;"
          >
            <div
              class="react-calendar__month-view__weekdays"
              style="display: flex; flex-wrap: no-wrap;"
            >
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Monday"
                  title="Monday"
                >
                  Mon
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Tuesday"
                  title="Tuesday"
                >
                  Tue
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Wednesday"
                  title="Wednesday"
                >
                  Wed
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Thursday"
                  title="Thursday"
                >
                  Thu
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Friday"
                  title="Friday"
                >
                  Fri
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Saturday"
                  title="Saturday"
                >
                  Sat
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Sunday"
                  title="Sunday"
                >
                  Sun
                </abbr>
              </div>
            </div>
            <div
              class="react-calendar__month-view__days"
              style="display: flex; flex-wrap: wrap;"
            >
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="June 29, 2020"
                >
                  29
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="June 30, 2020"
                >
                  30
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 1, 2020"
                >
                  1
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 2, 2020"
                >
                  2
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 3, 2020"
                >
                  3
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 4, 2020"
                >
                  4
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 5, 2020"
                >
                  5
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 6, 2020"
                >
                  6
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 7, 2020"
                >
                  7
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 8, 2020"
                >
                  8
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 9, 2020"
                >
                  9
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 10, 2020"
                >
                  10
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 11, 2020"
                >
                  11
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 12, 2020"
                >
                  12
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 13, 2020"
                >
                  13
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 14, 2020"
                >
                  14
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 15, 2020"
                >
                  15
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 16, 2020"
                >
                  16
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 17, 2020"
                >
                  17
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 18, 2020"
                >
                  18
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 19, 2020"
                >
                  19
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 20, 2020"
                >
                  20
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 21, 2020"
                >
                  21
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 22, 2020"
                >
                  22
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 23, 2020"
                >
                  23
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 24, 2020"
                >
                  24
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 25, 2020"
                >
                  25
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 26, 2020"
                >
                  26
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 27, 2020"
                >
                  27
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 28, 2020"
                >
                  28
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 29, 2020"
                >
                  29
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__tile--active react-calendar__tile--range react-calendar__tile--rangeStart react-calendar__tile--rangeEnd react-calendar__tile--rangeBothEnds react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 30, 2020"
                >
                  30
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 31, 2020"
                >
                  31
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="August 1, 2020"
                >
                  1
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="August 2, 2020"
                >
                  2
                </abbr>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders date picker for timeframe start 1`] = `
.c1 {
  padding: 2px;
}

.c0 {
  background: #FFFFFF;
}

<div
  class="c0"
  data-testid="date-start"
>
  <div
    class="react-calendar"
  >
    <div
      class="react-calendar__navigation"
    >
      <button
        aria-label=""
        class="react-calendar__navigation__arrow react-calendar__navigation__prev-button"
        type="button"
      >
        <div
          class="c1"
        >
          <svg
            height="19"
            opacity="1"
            viewBox="0 0 100 100"
            width="19"
          >
            <path
              d="M73.31 23l26.662 26.662-27.266 27.266-2.51-2.51 23.384-23.39H0v-4h92.198l-21.456-21.46L73.309 23z"
              fill="rgba(39,86,109,0.7)"
              transform="rotate(180 50 50)"
            />
          </svg>
        </div>
      </button>
      <button
        aria-label=""
        class="react-calendar__navigation__label"
        style="flex-grow: 1;"
        type="button"
      >
        <span
          class="react-calendar__navigation__label__labelText react-calendar__navigation__label__labelText--from"
        >
          July 2020
        </span>
      </button>
      <button
        aria-label=""
        class="react-calendar__navigation__arrow react-calendar__navigation__next-button"
        type="button"
      >
        <div
          class="c1"
        >
          <svg
            height="19"
            opacity="1"
            viewBox="0 0 100 100"
            width="19"
          >
            <path
              d="M73.31 23l26.662 26.662-27.266 27.266-2.51-2.51 23.384-23.39H0v-4h92.198l-21.456-21.46L73.309 23z"
              fill="rgba(39,86,109,0.7)"
            />
          </svg>
        </div>
      </button>
    </div>
    <div
      class="react-calendar__viewContainer"
    >
      <div
        class="react-calendar__month-view "
      >
        <div
          style="display: flex; align-items: flex-end;"
        >
          <div
            style="flex-grow: 1; width: 100%;"
          >
            <div
              class="react-calendar__month-view__weekdays"
              style="display: flex; flex-wrap: no-wrap;"
            >
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Monday"
                  title="Monday"
                >
                  Mon
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Tuesday"
                  title="Tuesday"
                >
                  Tue
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Wednesday"
                  title="Wednesday"
                >
                  Wed
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Thursday"
                  title="Thursday"
                >
                  Thu
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Friday"
                  title="Friday"
                >
                  Fri
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Saturday"
                  title="Saturday"
                >
                  Sat
                </abbr>
              </div>
              <div
                class="react-calendar__month-view__weekdays__weekday"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
              >
                <abbr
                  aria-label="Sunday"
                  title="Sunday"
                >
                  Sun
                </abbr>
              </div>
            </div>
            <div
              class="react-calendar__month-view__days"
              style="display: flex; flex-wrap: wrap;"
            >
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="June 29, 2020"
                >
                  29
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="June 30, 2020"
                >
                  30
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 1, 2020"
                >
                  1
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 2, 2020"
                >
                  2
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 3, 2020"
                >
                  3
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 4, 2020"
                >
                  4
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 5, 2020"
                >
                  5
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 6, 2020"
                >
                  6
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 7, 2020"
                >
                  7
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 8, 2020"
                >
                  8
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 9, 2020"
                >
                  9
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 10, 2020"
                >
                  10
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 11, 2020"
                >
                  11
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 12, 2020"
                >
                  12
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 13, 2020"
                >
                  13
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 14, 2020"
                >
                  14
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 15, 2020"
                >
                  15
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 16, 2020"
                >
                  16
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 17, 2020"
                >
                  17
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 18, 2020"
                >
                  18
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 19, 2020"
                >
                  19
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 20, 2020"
                >
                  20
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 21, 2020"
                >
                  21
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 22, 2020"
                >
                  22
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 23, 2020"
                >
                  23
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 24, 2020"
                >
                  24
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 25, 2020"
                >
                  25
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 26, 2020"
                >
                  26
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 27, 2020"
                >
                  27
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 28, 2020"
                >
                  28
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__tile--active react-calendar__tile--range react-calendar__tile--rangeStart react-calendar__tile--rangeEnd react-calendar__tile--rangeBothEnds react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 29, 2020"
                >
                  29
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 30, 2020"
                >
                  30
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="July 31, 2020"
                >
                  31
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="August 1, 2020"
                >
                  1
                </abbr>
              </button>
              <button
                class="react-calendar__tile react-calendar__month-view__days__day react-calendar__month-view__days__day--weekend react-calendar__month-view__days__day--neighboringMonth"
                style="flex-basis: 14.285714285714286%; flex-shrink: 0; flex-grow: 0; overflow: hidden;"
                type="button"
              >
                <abbr
                  aria-label="August 2, 2020"
                >
                  2
                </abbr>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
